Added logging, mc-color association, lumi scaling
git-svn-id: svn+ssh://svn.cern.ch/reps/atlasnyu/Physics/Common/PlotMaker/trunk@939 4525493e-7705-40b1-a816-d608a930855b

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 
 2012-01-16 George Lewis <George.Herbert.Lewis@cern.ch>
+	* Added python style logging
+	* Added the ability to assign colors to MC samples
+	* Added optional scaling of MC by lumi
+	* Adding log.py
+	* Tagging as PlotMaker-00-00-02
+
+	
+2012-01-16 George Lewis <George.Herbert.Lewis@cern.ch>
 	* Created a dedicated package making nice plots from histograms
 	* Mostly a copy of scripts from Hllll-00-06-02/scriptsfor now.
 	* Adding PlotMaker.py
