--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,11 @@
 
+2012-01-17 George Lewis <George.Herbert.Lewis@cern.ch>
+	* Merged the drawing of 1-d histograms to one method
+	* Added configuration for Atlas Labels, line styles, 
+	* Added simultaneous adding of data and mc files using glob
+	* Added Printing of multi-page pdf's
+	* Tagging as PlotMaker-00-00-03
+
 2012-01-16 George Lewis <George.Herbert.Lewis@cern.ch>
 	* Added python style logging
 	* Added the ability to assign colors to MC samples
